# human_eth_call_mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-uv.txt
.github/: RELEASE_SETUP.md
.github/workflows/: ci.yml  release.yml
scripts/: cursor-install-mcp.sh  docker-build.sh
src/etherscan_mcp_server/: __init__.py  client.py  server.py
tests/: __init__.py  test_all_tools.py
